@@ -1,3 +1,11 @@
+2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
+	
+	* properties.c (prop_cb):
+
+	Accessibility fixes bug #135374.
+
+	Patch by: Karthik BG  <kkbg@softhome.net>
+
 2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>
 
 	* battstat_applet.c:
